# LLM_Survey

./: .gitignore  CITATION.cff  README.md  pyproject.toml
docs/: faithfulness_audit_plan.md  faithfulness_remediation_matrix.md  fidelity_matrix.md  figures_and_tables.md  full_survey_gap_audit.md  full_survey_replan.md  index.md  limitations.md  mechanism_provenance.md  module_matrix.md  numpy_compliance_program.md  paper_map.md  publication_checklist.md  release_notes.md  research_narrative_and_method.md  resource_provenance.md  reuse_audit.md  scoreboard.md  survey_map_provenance.md
experiments/: run_adaptation_bundle_summary_demo.py  run_adaptation_leaderboard_demo.py  run_adaptation_summary_demo.py  run_advanced_attention_suite_demo.py  run_alignment_data_filter_demo.py  run_alignment_sft_demo.py  run_all_local_demos.py  run_attention_length_stability_demo.py  run_batch_scaling_demo.py  run_benchmark_harness_demo.py  run_bias_eval_demo.py  run_bidirectional_encoder_demo.py  run_block_sparse_attention_demo.py  run_calibration_eval_demo.py  run_capability_suite_demo.py  run_capability_vs_alignment_tradeoff_demo.py  run_causal_lm_demo.py  run_closed_model_registry_demo.py  run_code_corpus_demo.py  run_code_eval_demo.py  run_code_generation_demo.py  run_code_generation_risk_eval_demo.py  run_code_model_architecture_demo.py  run_configuration_scaling_demo.py  run_constitution_sweep_demo.py  run_constitutional_ai_demo.py  run_contamination_demo.py  run_context_packing_demo.py  run_corpus_profile_demo.py  run_cot_prompting_demo.py  run_cross_section_summary_demo.py  run_data_age_demo.py  run_data_curriculum_demo.py  run_data_mixture_toy_demo.py  run_data_quality_filter_demo.py  run_dataset_license_audit_demo.py  run_dedup_demo.py  run_docs_summary_demo.py  run_domain_coverage_demo.py  run_dpo_toy_demo.py  (+107 more)
llm_survey/: __init__.py
(+255 files in other folders)
